
2006-09-02  Martin Kutschker  <martin.t.kutschker@blackbox.net>

	* Fixed #4141: config.spamProtectEmailAddresses does not encrypt "9" digits correctly
	* Web>List localization view did not handle "edit marked" for translation records

2006-09-01 Ingmar Schlecht  <ingmar@typo3.org>

	* Fixed #529: TSConfig Help was empty. Thanks a lot to Stephane Schitter for extracting the new data from the references!

2006-08-31  Dmitry Dulepov  <typo3@accio.lv>

	* Reverted earlier "Performance enhancement for BE" (did not qualify as bugfix)

2006-09-01  Michael Stucki  <michael@typo3.org>

	* Fixed bug: Creation of sys_refindex table was not possible if $TYPO3_CONF_VARS[SYS][multiplyDBfieldSize] was set.
	* Indexed Search: Fixed bug #3994: OpenOffice.org files cannot be indexed by class.external_parser.php
	* Indexed Search: Fixed bug #4093: PHP warning if indexed_search search word contains a front slash

2006-08-31  Ernesto Baschny <ernst@cron-it.de>

	* Fixed bug #4035/3971: Error message when uploading one or two files in file-browser (BE)

2006-08-31  Dmitry Dulepov  <typo3@accio.lv>

	* Performance enhancement for BE: (1) caching images in typo3/gfx and typo3/sysext; (2) caching CSS files in typo3/sysext/t3skin/stylesheets

2006-08-31  Ernesto Baschny <ernst@cron-it.de>

	* Feature #4131: Respects label_alt setting in some more places (especially labels pointing to MM tables)

2006-08-31  Wolfgang Klinger <wolfgang@stufenlos.net>

	* Feature #3026: Text change for the 'Quality' label

2006-08-25  Michael Stucki  <michael@typo3.org>

	* Fixed bug #4076: Skin creates invalid HTML markup

2006-08-24  Michael Stucki  <michael@typo3.org>

	* Fixed bug #1236: 404 error while using the new content wizard
	* Fixed bug #3909: TYPO3_SSL does not detect valid SSL session
	* Fixed bug #3973: pageNotFound_handling=TRUE is interpreted as URL

2006-08-23  Michael Stucki  <michael@typo3.org>

	* Fixed bug #3960: Display correct version number in Install Tool (only when authenticated)