@@ -1,3 +1,6 @@
+2006-09-04  Michael Stucki  <michael@typo3.org>
+
+	* Fixed bug #1268: plainMailEncoded not working with charset conversion
 
 2006-09-02  Martin Kutschker  <martin.t.kutschker@blackbox.net>
 
